Added photp uploading functionality in api

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,5 +13,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "mrinalkumarjha",
+    "ApiKey": "574142956768833",
+    "ApiSecret": "8iUG9RWVKuPpiHXx2_T6NaTTX-g"
+  }
 }
